syntax = "proto3";

option java_multiple_files = true;

package com.twang.grpc.demo;

import public "google/protobuf/timestamp.proto";

//define the request payload
message HelloRequest {
    string firstName = 1;
    string lastName = 2;
}

message HelloResponse {
    string greeting = 1;
    google.protobuf.Timestamp time = 2;
}

//define the service contract.
service HelloService {
    rpc hello(HelloRequest) returns (HelloResponse);
}