syntax = "proto3";

option java_multiple_files = true;

package com.twang.grpc.demo;

message Stock {
    string ticker_symbol = 1;
    string company_name = 2;
    string description = 3;
}
message StockQuote {
    double price = 1;
    int32 offer_number = 2;
    string description = 3;
}

//define the service contract.
service StockQuoteProvider {

    rpc serverSideStreamingGetListStockQuotes(Stock) returns (stream StockQuote) {}

    rpc clientSideStreamingGetStatisticsOfStocks(stream Stock) returns (StockQuote) {}

    rpc bidirectionalStreamingGetListsStockQuotes(stream Stock) returns (stream StockQuote) {}
}